updated plm did

--- a/docs/plm_did.rmd
+++ b/docs/plm_did.rmd
@@ -224,7 +224,7 @@ The IVW estimates using DID and PLM are in the same ballpark but certainly not i
 DiD <- do_mr_wf_tab(a, rsid, x = "out_height", y = "eduyears2")
 DiD$b <- DiD$sby / DiD$sbx
 PLM <- list()
-for(i in 259:length(rsid))
+for(i in 1:length(rsid[1:385]))
 {
 	message(i, " of ", length(rsid))
 	f <- as.formula(paste0("eduyears2 ~ out_height | ", rsid[i]))
